@@ -687,6 +687,7 @@ wxMSW:
 - Fix setting label of submenu items (Artur Wieczorek).
 - Fix using Esc as accelerator in the menus.
 - Fix wrong initial status bar height in some cases (Artur Wieczorek).
+- Correct wxGetOsDescription() for Windows 10 (Tobias Taschner).
 
 
 3.0.1: (released 2014-06-15)
